crates/mun_codegen/src/snapshots/mun_codegen__test__assign_bit_op_i64.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn assign_bitand(a: i64, b: i64) -> i64 {\n        a &= b;\n        a\n    }\n    pub fn assign_bitor(a: i64, b: i64) -> i64 {\n        a |= b;\n        a\n    }\n    pub fn assign_bitxor(a: i64, b: i64) -> i64 {\n        a ^= b;\n        a\n    }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define i64 @assign_bitand(i64 %0, i64 %1) {
body:
  %b = alloca i64, align 8
  store i64 %1, ptr %b, align 4
  %a = alloca i64, align 8
  store i64 %0, ptr %a, align 4
  %a1 = load i64, ptr %a, align 4
  %b2 = load i64, ptr %b, align 4
  %bit_and = and i64 %a1, %b2
  store i64 %bit_and, ptr %a, align 4
  %a3 = load i64, ptr %a, align 4
  ret i64 %a3
}

define i64 @assign_bitor(i64 %0, i64 %1) {
body:
  %b = alloca i64, align 8
  store i64 %1, ptr %b, align 4
  %a = alloca i64, align 8
  store i64 %0, ptr %a, align 4
  %a1 = load i64, ptr %a, align 4
  %b2 = load i64, ptr %b, align 4
  %bit_or = or i64 %a1, %b2
  store i64 %bit_or, ptr %a, align 4
  %a3 = load i64, ptr %a, align 4
  ret i64 %a3
}

define i64 @assign_bitxor(i64 %0, i64 %1) {
body:
  %b = alloca i64, align 8
  store i64 %1, ptr %b, align 4
  %a = alloca i64, align 8
  store i64 %0, ptr %a, align 4
  %a1 = load i64, ptr %a, align 4
  %b2 = load i64, ptr %b, align 4
  %bit_xor = xor i64 %a1, %b2
  store i64 %bit_xor, ptr %a, align 4
  %a3 = load i64, ptr %a, align 4
  ret i64 %a3
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
