crates/mun_codegen/src/snapshots/mun_codegen__test__assign_shift_op_u32.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn assign_leftshift(a: u32, b: u32) -> u32 {\n        a <<= b;\n        a\n    }\n    pub fn assign_rightshift(a: u32, b: u32) -> u32 {\n        a >>= b;\n        a\n    }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define i32 @assign_leftshift(i32 %0, i32 %1) {
body:
  %b = alloca i32, align 4
  store i32 %1, ptr %b, align 4
  %a = alloca i32, align 4
  store i32 %0, ptr %a, align 4
  %a1 = load i32, ptr %a, align 4
  %b2 = load i32, ptr %b, align 4
  %left_shift = shl i32 %a1, %b2
  store i32 %left_shift, ptr %a, align 4
  %a3 = load i32, ptr %a, align 4
  ret i32 %a3
}

define i32 @assign_rightshift(i32 %0, i32 %1) {
body:
  %b = alloca i32, align 4
  store i32 %1, ptr %b, align 4
  %a = alloca i32, align 4
  store i32 %0, ptr %a, align 4
  %a1 = load i32, ptr %a, align 4
  %b2 = load i32, ptr %b, align 4
  %right_shift = lshr i32 %a1, %b2
  store i32 %right_shift, ptr %a, align 4
  %a3 = load i32, ptr %a, align 4
  ret i32 %a3
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
