crates/mun_codegen/src/snapshots/mun_codegen__test__assign_shift_op_u64.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn assign_leftshift(a: u64, b: u64) -> u64 {\n        a <<= b;\n        a\n    }\n    pub fn assign_rightshift(a: u64, b: u64) -> u64 {\n        a >>= b;\n        a\n    }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define i64 @assign_leftshift(i64 %0, i64 %1) {
body:
  %b = alloca i64, align 8
  store i64 %1, ptr %b, align 4
  %a = alloca i64, align 8
  store i64 %0, ptr %a, align 4
  %a1 = load i64, ptr %a, align 4
  %b2 = load i64, ptr %b, align 4
  %left_shift = shl i64 %a1, %b2
  store i64 %left_shift, ptr %a, align 4
  %a3 = load i64, ptr %a, align 4
  ret i64 %a3
}

define i64 @assign_rightshift(i64 %0, i64 %1) {
body:
  %b = alloca i64, align 8
  store i64 %1, ptr %b, align 4
  %a = alloca i64, align 8
  store i64 %0, ptr %a, align 4
  %a1 = load i64, ptr %a, align 4
  %b2 = load i64, ptr %b, align 4
  %right_shift = lshr i64 %a1, %b2
  store i64 %right_shift, ptr %a, align 4
  %a3 = load i64, ptr %a, align 4
  ret i64 %a3
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
